# subject-ms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alp  Dockerfile.deb  README.md  subject-ms.yaml
migrations/2020-09-29-195910_create_subject/: down.sql  up.sql
migrations/2020-10-02-163606_create_teacher/: up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs  subject.rs
src/routes/: content.rs  mod.rs  subject.rs  teacher.rs
