[package]
name = "subject-ms"
version = "0.1.0"
authors = ["jcvar <36166613+jcvar@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_mysql_pool", "json"]
